# vizsla-playground

./: .gitignore  README.md  astro.config.mjs  emsdk.lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.embed.config.ts  vizsla.lock.json
.github/workflows/: pages.yml
patches/vizsla/: 0001-emscripten-slang-build.patch
scripts/: build-pages.mjs  build-vizsla-wasm.mjs  build-vizsla-wasm.ps1  install-docs-widget.mjs  install-docs-widget.ps1  prepare-vizsla.mjs  prepare-vizsla.ps1  script-utils.mjs  setup-emsdk.mjs  setup-emsdk.ps1  sync-vscode-assets.mjs  sync-vscode-assets.ps1
src/: scenarios.ts  types.ts
src/components/: VizslaLab.astro  VizslaLabEmbedExample.astro  vizsla-lab.styles.ts  vizsla-lab.ts  vizsla-lab.view.ts
src/lab/: lsp-client.ts  monaco-lsp.ts  monaco-protocol.ts  monaco-setup.ts  monaco-shadow-hover.ts  vscode-platform.ts  waveform.ts  workspace.ts
src/lab/monaco/: actions.ts  completion.ts  diagnostics.ts  edits.ts  guards.ts  hover.ts  index.ts  inlay.ts  markup.ts  navigation.ts  ranges.ts  semantic-tokens.ts  signature.ts  types.ts
src/pages/: docs-embed.astro  index.astro
src/scenarios/bad-port/: scenario.json
src/scenarios/counter/: scenario.json
src/scenarios/macro-guard/: scenario.json
src/scenarios/signature-inlay/: scenario.json
src/scenarios/syntax-error/: scenario.json
src/workers/: lsp-protocol.ts  vizsla-lsp.worker.ts
wasm/js/: vizsla-lsp.adapter.js
wasm/vizsla-lsp/: Cargo.toml
wasm/vizsla-lsp/src/: main.rs
